Opened 3 years ago
Closed 3 years ago
#18015 closed defect (fixed)
Mac: Fix crash due to CGDisplayModeCopyPixelEncoding returning NULL
Reported by: | botg | Owned by: | Vadim Zeitlin <vadim@…> |
---|---|---|---|
Priority: | normal | Milestone: | |
Component: | wxOSX | Version: | dev-latest |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Patch: | yes |
Description
It is possible for CGDisplayModeCopyPixelEncoding to return NULL, e.g. during a switch between the built-in screen and an external monitor on a Macbook.
The attached patches for both master and WX_3_0_BRANCH fix the crash by checking the return value of CGDisplayModeCopyPixelEncoding in wxDisplayDepth().
Attachments (2)
Change History (4)
Changed 3 years ago by botg
comment:1 Changed 3 years ago by Vadim Zeitlin <vadim@…>
comment:2 Changed 3 years ago by Vadim Zeitlin <vadim@…>
- Owner set to Vadim Zeitlin <vadim@…>
- Resolution set to fixed
- Status changed from new to closed
Note: See
TracTickets for help on using
tickets.
Patch for master